# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: cc-action.yml  cc-reporter.yml
gendiff/: __init__.py  data_processing.py  file_parsing.py  output.py
gendiff/output_format/: stylish.py
gendiff/output_formats/: __init__.py  json.py  json_output.py  plain.py  plain_output.py  stylish.py  stylish_output.py  yaml.py  yaml_output.py
gendiff/scripts/: gendiff.py
tests/: test_data_processing.py  test_file_parsing.py  test_gendiff.py  test_output.py
tests/fixtures/: dif_nes1_nes2.json  dif_nes1_nes2.yml  flat_stylish.txt  help_output.txt  nested_stylish.txt
