[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "shows a difference between 2 configuration files (YAML or JSON)"
authors = ["Anton 'ai_gelios' Kadkin <ai_gelios@mail.ru>"]
readme = "README.md"
repository = "https://github.com/AIGelios/python-project-50"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Topic :: File Formats :: JSON :: JSON Schema",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console",
]
packages = [{ include = "gendiff" }]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
